--- a/package.json
+++ b/package.json
@@ -2,20 +2,27 @@
   "name": "pawsome",
   "version": "1.0.0",
   "description": "It's an Ecommerce website desined in express using ejs",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "keywords": [],
+  "homepage": "https://github.com/najiyasheri/pawsome#readme",
+  "bugs": {
+    "url": "https://github.com/najiyasheri/pawsome/issues"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/najiyasheri/pawsome.git"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
+  "author": "",
   "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/najiyasheri/pawsome/issues"
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon app"
   },
-  "homepage": "https://github.com/najiyasheri/pawsome#readme"
+  "dependencies": {
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.17.1",
+    "nodemon": "^3.1.10"
+  }
 }
