--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node build app",
-    "dev":"nodemon app"
+    "dev": "nodemon app"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -26,6 +26,7 @@
     "express": "^5.1.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10"
   }
 }
