--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
     "nodemailer": "^7.0.5",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
