--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "tailwindcss": "^4.1.12"
