--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "connect-flash": "^0.1.1",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.2",
@@ -36,6 +37,7 @@
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdfkit": "^0.17.2",
     "razorpay": "^2.9.6"
   },
   "devDependencies": {
